# qorpo-crypto-api

./: .gitignore  00_init.sql  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
app/: __init__.py
app/main/: database.py
app/main/controller/: price_controller.py
app/main/middleware/: __init__.py  handler.py
app/main/model/: currency.py
app/main/router/: price.py  price_router.py
app/main/service/: db.py
app/test/: conftest.py  test_price_controller.py
